# pybind11-ctypes-bench

./: CMakeLists.txt  README.md  benchmark.py
src/: pybind11_module.cpp  string_func.c  string_func.h
